# LogServer

./: .gitignore  BuildProject.bat  BuildProject.sh  CMakeLists.txt  Client  Client.cpp  Client.hpp  Client_2  Client_POSIX.hpp  Client_win.cpp  DatabaseConnect.cpp  DatabaseConnect.hpp  InstallLibraries.sh  README.md  Server  Server.code-workspace  Server.cpp  Server.hpp  toJson.json
.github/workflows/: LogServer.yml
DB/: Logs.db  Logs.sqbpro
src/: Client.cpp  Client_2.cpp  Client_POSIX.hpp  Client_UNIX.hpp  DatabaseConnect.hpp  Server.cpp  Server.hpp
src/Client/: CMakeLists.txt  Client_POSIX.hpp  Client_UNIX.hpp
src/DB/: Logs.sqbpro
src/Server/: DatabaseConnect.cpp  DatabaseConnect.hpp  Server.cpp  Server.hpp
src/Server/DB/: Logs.db
